--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-router-use-location-state": "^2.3.1",
     "react-scripts": "3.4.1",
     "react-slick": "^0.26.1",
     "reactstrap": "^8.4.1",
