--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-use-location-state": "^2.3.1",
     "react-scripts": "3.4.1",
     "react-slick": "^0.26.1",
     "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-promise-middleware": "^6.1.2",
     "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2"
   },
