--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.2",
     "slick-carousel": "^1.8.1",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "universal-cookie": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
